# BLE-Device-Manager-App

./: .gitignore  README.md  gradlew  gradlew.bat  local.properties.example  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/bledevicemanager/: Config.java  MainActivity.java  NativeParser.java  Permissions.java
app/src/main/java/com/example/bledevicemanager/ble/: BleDeviceConnection.java  BleManager.java
app/src/main/java/com/example/bledevicemanager/logging/: StatsLogger.java
app/src/main/java/com/example/bledevicemanager/model/: DeviceRow.java
app/src/main/java/com/example/bledevicemanager/ui/: DeviceAdapter.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_device.xml
app/src/main/res/values/: strings.xml  themes.xml
